--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -1,30 +1,45 @@
 form
 {
   height: 850px;
+  background: url('../../../assets/img/vino7.jpg') no-repeat center;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .container
 {
-  background-color: #fff;
+
   font-family: Arial, Helvetica, sans-serif;
-  background: url('../../../assets/img/vino7.jpg') no-repeat center;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  background-size: cover;
+  background-position: center;
+  display: block;
+  margin: 30px;
+  padding: 40px 20px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 50px black;
   overflow: hidden;
   border: 1px solid ;
-  border-radius: 20px;
   justify-content: center;
 }
 h1
 {
   color: dimgray;
-  font-size: 28px;
+  font-size: 30px;
   line-height: 1.2;
   font-weight: 500;
+  font-weight: bold;
+  text-decoration: solid;
 }
 h2
 {
   color: darkgray;
-  font-weight: bold;
-  text-decoration: solid;
-
+  font-size: 20px;
+  display: block;
+  margin-bottom: 30px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 label{
   color: black;
@@ -36,8 +51,6 @@ input{
   background-color: transparent;
   border: 1px solid;
   border-radius: 20px;
-
-
 }
 
 p
