--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -1,10 +1,14 @@
 .container{
-  background: url(../../../assets/img/vino4.jpg);
+  background: url(../../../assets/img/vino4.jpg) no-repeat ;
   overflow: hidden;
   border: 1px solid ;
   border-radius: 20px;
   justify-content: center;
   text-align: center;
+
+
+
+
 }
 h2{
   color: dimgray;
